--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <script>console.log((new Date() - performance.timing.navigationStart) / 1000)</script> -->
+    
   </head>
   <body>
     <noscript>
@@ -14,4 +16,9 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <!-- <script>
+    window.addEventListener('load', () => {
+      console.log((new Date() - performance.timing.navigationStart) / 1000, '1')
+    })
+  </script> -->
 </html>
